Symbol Table and Pass#1 Analysis (Phase1)/gParser.java
// Generated from g.g4 by ANTLR 4.7

    import java.util.List;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		COMMENT=39, CONST_INT=40, CONST_STRING=41, CONST_CHAR=42, Id=43, WS=44;
	public static final int
		RULE_program = 0, RULE_actor = 1, RULE_actorDef = 2, RULE_actorBodyStatement = 3, 
		RULE_type = 4, RULE_arrayType = 5, RULE_varType = 6, RULE_dataDef = 7, 
		RULE_receiver = 8, RULE_receiverDef = 9, RULE_argumentDef = 10, RULE_receiverBodyStatement = 11, 
		RULE_statement = 12, RULE_scopeStatement = 13, RULE_breakStatement = 14, 
		RULE_writeStatement = 15, RULE_expression = 16, RULE_assignmentExpression = 17, 
		RULE_assignmentExpressionTmp = 18, RULE_orExpression = 19, RULE_orExpressionTmp = 20, 
		RULE_andExpression = 21, RULE_andExpressionTmp = 22, RULE_equalityCmpExpression = 23, 
		RULE_equalityCmpExpressionTmp = 24, RULE_comparisonExpression = 25, RULE_comparisonExpressionTmp = 26, 
		RULE_addExpression = 27, RULE_addExpressionTmp = 28, RULE_multExpression = 29, 
		RULE_multExpressionTmp = 30, RULE_notExpression = 31, RULE_notExpressionTmp = 32, 
		RULE_arrayAccessExpression = 33, RULE_arrayAccessExpressionTmp = 34, RULE_otherExpression = 35, 
		RULE_quitStatement = 36, RULE_sendStatement = 37, RULE_functionCall = 38, 
		RULE_arguments = 39, RULE_argument = 40, RULE_ifStatement = 41, RULE_elseIfelse = 42, 
		RULE_forEachStatement = 43, RULE_elseIf = 44, RULE_elseStatement = 45;
	public static final String[] ruleNames = {
		"program", "actor", "actorDef", "actorBodyStatement", "type", "arrayType", 
		"varType", "dataDef", "receiver", "receiverDef", "argumentDef", "receiverBodyStatement", 
		"statement", "scopeStatement", "breakStatement", "writeStatement", "expression", 
		"assignmentExpression", "assignmentExpressionTmp", "orExpression", "orExpressionTmp", 
		"andExpression", "andExpressionTmp", "equalityCmpExpression", "equalityCmpExpressionTmp", 
		"comparisonExpression", "comparisonExpressionTmp", "addExpression", "addExpressionTmp", 
		"multExpression", "multExpressionTmp", "notExpression", "notExpressionTmp", 
		"arrayAccessExpression", "arrayAccessExpressionTmp", "otherExpression", 
		"quitStatement", "sendStatement", "functionCall", "arguments", "argument", 
		"ifStatement", "elseIfelse", "forEachStatement", "elseIf", "elseStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\n'", "'end'", "'actor'", "'<'", "'>'", "'['", "']'", "'int'", 
		"'char'", "'='", "','", "'receiver'", "'('", "')'", "'begin'", "'break'", 
		"'write'", "'or'", "'and'", "'=='", "'<>'", "'+'", "'-'", "'*'", "'/'", 
		"'not'", "'{'", "'}'", "'quit'", "'sender'", "'self'", "'<<'", "'read'", 
		"'if'", "'foreach'", "'in'", "'elseif'", "'else'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "COMMENT", "CONST_INT", "CONST_STRING", "CONST_CHAR", 
		"Id", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "g.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }




	    void print(String str){
	        System.out.println(str);
	    }

	    void putLocalVar(String name, Type type) throws ItemAlreadyExistsException {
	        SymbolTableLocalVariableItem item = new SymbolTableLocalVariableItem(
	            new Variable(name,type),
	            SymbolTable.top.getOffset(Register.SP)
	        );
	        SymbolTable.resultString += item.itemToString() + '\n';
	        SymbolTable.top.put(
	            item
	        );
	    }

	    void putGlobalVar(String name, Type type) throws ItemAlreadyExistsException {
	        SymbolTableGlobalVariableItem item = new SymbolTableGlobalVariableItem(
	              new Variable(name,type),
	              SymbolTable.top.getOffset(Register.GP)
	        );
	        SymbolTable.resultString += item.itemToString() + '\n';
	        SymbolTable.top.put(
	               item
	        );
	    }

	    void beginScope() {
	            SymbolTable.resultString += "----"+'\n';
	        	int offset = 0;
	        	if(SymbolTable.top != null){
	            	offset = SymbolTable.top.getOffset(Register.SP);
	            }
	            SymbolTable.push(new SymbolTable(SymbolTable.top));
	            SymbolTable.top.setOffset(Register.GP, SymbolTable.getGlobalOffset());
	            SymbolTable.top.setOffset(Register.SP, offset);
	    }

	    void endScope() {
	//        print("Stack global offset: " + SymbolTable.top.getOffset(Register.GP));
	//        print("Stack local offset: " + SymbolTable.top.getOffset(Register.SP));
	        //{printSymbolTableTop();}
	        SymbolTable.setGlobalOffset(SymbolTable.top.getOffset(Register.GP));
	        SymbolTable.pop();
	    }

	    public void putTemp(String baseName, Type type) {
	    		int idx = 1;
	            String newName = baseName + "_Temproray_" + Integer.toString(idx);
	    		while (SymbolTable.top.containsItemName(newName)) {
	    			idx++;
	    			newName = baseName + "_Temproray_" + Integer.toString(idx);
	    		}
	    		try{
	    		    putLocalVar(newName, type);
	            }catch(ItemAlreadyExistsException e) {
	                 System.err.println("-----Exception--------:duplicate actor name");
	            }
	    }


	    void putReceiver(String name, List<Type> arguments) throws ItemAlreadyExistsException{
	        SymbolTableFunctionObject item = new SymbolTableFunctionObject(
	                                                         arguments,
	                                                         name
	                                                     );
	        SymbolTable.resultString += "---- "+ item.itemToString()+ " ----"+'\n';
	        SymbolTable.top.put(
	            new SymbolTableFunctionObject(
	                arguments,
	                name
	            )
	        );


	    }

	    void putTempReciver(String name, List<Type> arguments){
	        print("*************put Temp Receiver");
	        int idx=1;
	        String newName = name + "_TEMPORARY_" + Integer.toString(idx);
	        SymbolTableFunctionObject newReceiver = new SymbolTableFunctionObject(
	                                                                  arguments,
	                                                                  newName
	                                                              );

	        while (SymbolTable.top.containsItemName(newReceiver.getKey())) {
	            idx++;
	            newName = name + "_TEMPORARY_" + Integer.toString(idx);
	            newReceiver = new SymbolTableFunctionObject(arguments, newName);
	        }
	        try{
	            putReceiver(newName, arguments);
	        }catch(ItemAlreadyExistsException e) {
	             System.err.println("-----Exception--------:duplicate actor name");
	        }
	    }

	    void printSymbolTableTop(){
	    print("printing symbol table");
	    SymbolTable.top.print();}

	public gParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public boolean synHasActor;
		public ActorContext a;
		public List<ActorContext> actor() {
			return getRuleContexts(ActorContext.class);
		}
		public ActorContext actor(int i) {
			return getRuleContext(ActorContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			//print("program");
			    
			beginScope();
			((ProgramContext)_localctx).synHasActor =  false;
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__2) {
				{
				setState(99);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__2:
					{
					setState(95);
					((ProgramContext)_localctx).a = actor();
					if(((ProgramContext)_localctx).a.synActorExists){((ProgramContext)_localctx).synHasActor =  true;}
					}
					break;
				case T__0:
					{
					setState(98);
					match(T__0);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			if(!_localctx.synHasActor){
			          {print("program 1doesnt have any actor");}
			        //{throw new NoActorException();}
			    }
			endScope();

			        if(!SymbolTable.hasError){
			            print(SymbolTable.resultString);
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorContext extends ParserRuleContext {
		public boolean synActorExists;
		public ActorDefContext actorDef() {
			return getRuleContext(ActorDefContext.class,0);
		}
		public TerminalNode EOF() { return getToken(gParser.EOF, 0); }
		public List<ActorBodyStatementContext> actorBodyStatement() {
			return getRuleContexts(ActorBodyStatementContext.class);
		}
		public ActorBodyStatementContext actorBodyStatement(int i) {
			return getRuleContext(ActorBodyStatementContext.class,i);
		}
		public ActorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterActor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitActor(this);
		}
	}

	public final ActorContext actor() throws RecognitionException {
		ActorContext _localctx = new ActorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_actor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			//print("actor");
			  
			setState(109);
			actorDef();
			beginScope();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__11))) != 0)) {
				{
				{
				setState(111);
				actorBodyStatement();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			SymbolTable.resultString += "------------------------------------------------------"+'\n';
			setState(118);
			match(T__1);
			endScope();
			setState(120);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==T__0) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			((ActorContext)_localctx).synActorExists =  true;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorDefContext extends ParserRuleContext {
		public Token name;
		public Token CONST_INT;
		public TerminalNode CONST_INT() { return getToken(gParser.CONST_INT, 0); }
		public TerminalNode Id() { return getToken(gParser.Id, 0); }
		public ActorDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterActorDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitActorDef(this);
		}
	}

	public final ActorDefContext actorDef() throws RecognitionException {
		ActorDefContext _localctx = new ActorDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_actorDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__2);
			setState(124);
			((ActorDefContext)_localctx).name = match(Id);
			setState(125);
			match(T__3);
			setState(126);
			((ActorDefContext)_localctx).CONST_INT = match(CONST_INT);
			setState(127);
			match(T__4);
			setState(129); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(128);
				match(T__0);
				}
				}
				setState(131); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );

				    int actorBufferLength = (((ActorDefContext)_localctx).CONST_INT!=null?Integer.valueOf(((ActorDefContext)_localctx).CONST_INT.getText()):0);
			        if (actorBufferLength<=0){
			            print( "Line:" +Integer.toString(((ActorDefContext)_localctx).name.getLine()) +"  +++++++++++++++Zero Or Negative Length in actor buffer length+++++++++++++++" );
			            SymbolTable.hasError = true;
			            actorBufferLength = 0;
			        }
			        try{
			            putLocalVar((((ActorDefContext)_localctx).name!=null?((ActorDefContext)_localctx).name.getText():null), new ActorType(actorBufferLength));
			        }
			        catch(ItemAlreadyExistsException e) {
			            System.err.println( "Line:" +Integer.toString(((ActorDefContext)_localctx).name.getLine()) + "-----Exception--------:duplicate actor name");
			            SymbolTable.hasError = true;
			            putTemp((((ActorDefContext)_localctx).name!=null?((ActorDefContext)_localctx).name.getText():null), new ActorType(actorBufferLength));
			        }
			        SymbolTable.resultString += "----------------- Actor : "+(((ActorDefContext)_localctx).name!=null?((ActorDefContext)_localctx).name.getText():null)+"<"+Integer.toString((((ActorDefContext)_localctx).CONST_INT!=null?Integer.valueOf(((ActorDefContext)_localctx).CONST_INT.getText()):0))+"> -------------------------"+'\n';
				
			//print("actorDef : " + $name.text);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorBodyStatementContext extends ParserRuleContext {
		public DataDefContext dataDef() {
			return getRuleContext(DataDefContext.class,0);
		}
		public ReceiverContext receiver() {
			return getRuleContext(ReceiverContext.class,0);
		}
		public ActorBodyStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorBodyStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterActorBodyStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitActorBodyStatement(this);
		}
	}

	public final ActorBodyStatementContext actorBodyStatement() throws RecognitionException {
		ActorBodyStatementContext _localctx = new ActorBodyStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_actorBodyStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			//print("actorBodyStatement");
			  
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
			case T__8:
				{
				setState(137);
				dataDef(true);
				setState(139); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(138);
					match(T__0);
					}
					}
					setState(141); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__0 );
				}
				break;
			case T__11:
				{
				setState(143);
				receiver();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type dataType;
		public ArrayTypeContext array;
		public VarTypeContext variable;
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitType(this);
		}
	}
